Updated our meta description and the static extension page

--- a/trailr/app/views/home/extension.html.erb
+++ b/trailr/app/views/home/extension.html.erb
@@ -2,9 +2,11 @@
 	LineHive: JetPack
 <% end %>
 
-<h2>CrowdBrowsing</h2>
+<h2>LineHive.com: Crowdbrowsing extension</h2>
 
-<p><b>CrowdBrowsing</b>: A new way to discover interesting content on the web. Install the <a href="/crowdbrowse.xpi">LineHive Firefox Extension</a> (requires Firefox 3.6+). The LineHive Firefox Extension will install the discreet LineHive Button on your toolbar that will light up when the page you're on has timelines associated with it. Click the LineHive Button to view all the stories that cross paths with you!</p>
+<p>
+While you are browsing the internet, this extension will let you know when there are timelines associated with the active page. Then browse those timelines without going to LineHive.com.  We call it <b>crowdbrowsing</b> and it currently works for Firefox 3.6+.	
+</p>
 
 <div class="space_20"></div>
 <div class="space_20"></div>
