Small mistake from the last commit - I am adding an actual isntall link on the extension page

--- a/trailr/app/views/home/extension.html.erb
+++ b/trailr/app/views/home/extension.html.erb
@@ -8,6 +8,10 @@
 While you are browsing the internet, this extension will let you know when there are timelines associated with the active page. Then browse those timelines without going to LineHive.com.  We call it <b>crowdbrowsing</b> and it currently works for Firefox 3.6+.	
 </p>
 
+<p>
+	<a href="/crowdbrowse.xpi">Install Now</a>
+</p>
+
 <div class="space_20"></div>
 <div class="space_20"></div>
 <div class="space_20"></div>
