--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -1,6 +1,6 @@
 
 <% content_for :title do %>
-	LineHive: Hyperlink Haikus
+	LineHive: Hyperlink Storytelling
 <% end %>
 
 
@@ -33,8 +33,8 @@
 
 
 <div id="linehive_description">
-	<h2>LineHive lets anybody tell mini-stories.</h2>
-	<h3>You collect links and we turn them into beautiful timelines to share with the world.</h3>	
+	<h2>Hyperlink Storytelling</h2>
+	<h3>All you do is paste links and we'll create beautiful mini-stories you can share with the world.</h3>	
 </div>
 
 
