Made the text changes to the about page

--- a/trailr/app/views/home/about.html.erb
+++ b/trailr/app/views/home/about.html.erb
@@ -2,56 +2,17 @@
 	LineHive: About
 <% end %>
 
+<h2>About LineHive</h2>
 
-<div class="equal_columns">
-		
-	<div class="left">
-		<h2>The LineHive concept</h2>
-
-		<p><b>Create</b> a timeline by pasting links.<br><br>
-
-		<b>Share</b> its URL, embed it anywhere.<br><br>
-
-		<b>Comment</b> on any timeline.<br><br>
-
-		<b>Benefit</b> as the crowd maps the web.</p><br>
-		
-	</div>
-
-	<div class="right">
-		<h2>4 reasons LineHive is interesting</h2>
-
-		<p><b>Secretly educational</b> by sneaking learning into a communication tool.<br><br>
-
-		<b>Lightweight learning</b> by stripping down extraneous features.<br><br>
-
-		<b>Spans age groups and classes</b> by allowing any links to be associated.<br><br>
-
-		<b>Technically simple</b>, which makes the Jetpack icing on the cake.</p>
-		
-	</div>
-
-
-	
-	<div class="clear"></div>
-	
-</div>
-
-
-<div class="space_20"></div>
-
-
-<h2>Sample Timelines</h2>
+<h3>Hyperlink storytelling</h3>
 
 <p>
-	<%= link_to "Leadup to Obama's State of the Union", :controller => "trails", :action => "show", :id => "1" %>
+As we browse news stories, we make mental connections between pages. 'Hyperlink storytelling' is putting those links together to create mini-stories. Our algorithms automatically create timelines to make your mini-story a mini-beauty. Thinking through linking. Browse the connections others make of the same news stories.
 </p>
 
-<p>
-	<%= link_to "Haiti Earthquake", :controller => "trails", :action => "show", :id => "2" %>
-</p>
+<h3>Your feedback = digital unobtanium</h3>
 
 <p>
-	<%= link_to "Beyonce goes from new kid on the block to Grammy winner", :controller => "trails", :action => "show", :id => "3" %>
+LineHive started as a research project in the human-computer interaction group at Stanford University. We'd love if you give us feedback after creating a few lines. How does hyperlink storytelling change the way you think and link?
 </p>
 
