Progress on fullscreen, slidedown does not work with the iframe and div, so we are going to do a window popup for search insteade

--- a/trailr/app/views/trails/_miniline.html.erb
+++ b/trailr/app/views/trails/_miniline.html.erb
@@ -15,10 +15,12 @@
 	
 	<div class="events">	
 		<% for article in trail.articles %>
-
 			<div class="event">
 				<div class="thumbnail">
 					<img src="<%= article.image_url %>" />
+				</div>
+				<div class="url">
+					<%= article.url %>
 				</div>
 				<div class="headline" title="<%= article.headline %>">
 					<%= article.headline %>
