--- a/trailr/public/stylesheets/fullscreen.css
+++ b/trailr/public/stylesheets/fullscreen.css
@@ -6,102 +6,66 @@ html, body {margin: 0px; padding: 0px; height: 100%; border: none;}
 	display: block; border: none; 
 	margin:0px;
 	width:100%;
+	height:100%;
 }
-#timelinedivcon
+#source
+{
+margin:0px;
+}
+
+#timelinediv
 {
 	width:100%;
-	height:250px; 
-	top:0px;
+	height:88px;
+	margin-top:0px;
 	z-index:9999;
 	display:block;
 	text-align:center;
-}
-#timelinediv
-{
-	height:250px;
-	top:0px;
 	background-color:white;
 }
 
-#timelinediv #close
+#timelinediv h1
 {
-	right:12px;float:right;
-	margin-top:235px;
-	font-family: Sans-serif; font-size: 10px;
+	margin:0px;
+	padding:0px;
 }
 
-#timeline
+#timelinediv h2
 {
-	width:900px;
-	height:200px;
-	top:10px;
-	left:50%;
-	margin-left:-450px;
+	margin:0px;
+	padding:0px;
 }
 
-#timelineHead #Tcontrols
+#timelinediv .event
 {
-	position:absolute;
-	top:0px;
-	width:100%;
-	height:30px;
+cursor:pointer;
 }
-#timelinediv #Tcontrols #prevL { cursor:pointer; float:left; margin-top:8px; margin-left:5px; text-align: left;}
-#timelinediv #Tcontrols #prevE { cursor:pointer; float:left; margin-top:8px; margin-left:50px; }
-#timelinediv #Tcontrols #nextE { cursor:pointer; float:right; margin-top:8px; margin-right:50px; }
-#timelinediv #Tcontrols #nextL { cursor:pointer; float:right; margin-top:8px; margin-right:5px; text-align: right;}
-
-#timelineHeadCon
+#timelineHead
 {
-	font-family: Sans-serif;
-	font-size: 10px;
+	font-family:Helvetica, Arial, Sans-Serif; font-size: 10px;
 	padding: 3px;
 	padding-left: 0px;
-	padding-right:0px;
-	
-	height:30px; 
+	padding-right:0px;	
 	position:relative; 
 	top:0px; 
 	background-color:#ffffcc;
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffcc), color-stop(0.5, #ffcc00), color-stop(0.5, #ffcc00), to(#ffcc33));
 	background: -moz-linear-gradient(90deg, #ffffcc, #ffcc00, #ffcc33);
 }
-#timelineHead
-{
-	margin-top:5px;
-	font-size: 14px;
-}
 
-.timelineIndicator
+#timelineHead #controls
 {
-	font-family: Sans-serif;
-	font-size: 10px;
-	background-color:white;
-	padding: 3px;
-	width:150px; 
-	height:10px; 
-	position:fixed; 
-	z-index:9998;
-	top:0px; 
-	left:50%; 
-	margin-left:-50px; 
-	-moz-border-radius-bottomleft: 15px; -webkit-border-bottom-left-radius: 15px; border: 1px solid #000; border-top:0px;
-	-moz-border-radius-bottomright: 15px; -webkit-border-bottom-right-radius: 15px; border: 1px solid #000; border-top:0px;
-	 background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffcc), color-stop(0.5, #ffcc00), color-stop(0.5, #ffcc00), to(#ffcc33));
+	position:absolute;
+	top:0px;
+	width:100%;
 }
-.timelineIndicator p
-{
-	float:left;
-	margin:0;
-	overflow:hidden;
-	padding-left:6px;
-}
-.timelineIndicator a
-{
-	margin-left:8px;
-	color: #0099ff;
-	letter-spacing:.095em;
-	font-weight:normal;
-	text-decoration:none;
-	border-bottom:1px dotted #0099ff;
-}
+#timelinediv #controls #prevL { cursor:pointer; float:left; margin-top:8px; margin-left:5px; text-align: left;}
+#timelinediv #controls #prevE { cursor:pointer; float:left; margin-top:8px; margin-left:50px; }
+#timelinediv #controls #nextE { cursor:pointer; float:right; margin-top:8px; margin-right:50px; }
+#timelinediv #controls #nextL { cursor:pointer; float:right; margin-top:8px; margin-right:5px; text-align: right;}
+#timelinediv #more {position:relative;margin-top:30px;float:right}
+
+
+.mini_timeline { margin-top:3px; }
+
+.mini_timeline .caption { display:none; }
