--- a/trailr/app/views/trails/s.html.erb
+++ b/trailr/app/views/trails/s.html.erb
@@ -10,6 +10,6 @@
 		<div style="">
 		<%= render :partial => "miniline", :locals => {:trail => @trail, :num => @num } %>
 		</div>
-
+aldskfj
 	</body>
 </html>
