--- a/trailr/public/stylesheets/fullscreen.css
+++ b/trailr/public/stylesheets/fullscreen.css
@@ -38,8 +38,16 @@ margin:0px;
 
 #timelinediv .event
 {
+line-height:normal;
 cursor:pointer;
 }
+
+#timelineHeadLink
+{
+	cursor:pointer;
+}
+
+
 #timelineHead
 {
 	font-family:Helvetica, Arial, Sans-Serif; font-size: 10px;
@@ -63,7 +71,7 @@ cursor:pointer;
 #timelinediv #controls #prevE { cursor:pointer; float:left; margin-top:8px; margin-left:50px; }
 #timelinediv #controls #nextE { cursor:pointer; float:right; margin-top:8px; margin-right:50px; }
 #timelinediv #controls #nextL { cursor:pointer; float:right; margin-top:8px; margin-right:5px; text-align: right;}
-#timelinediv #more {position:relative;margin-top:30px;float:right}
+#timelinediv #more {position:relative;margin-top:30px;float:right; cursor:pointer;}
 
 
 .mini_timeline { margin-top:3px; }
