--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -166,7 +166,7 @@
 	<%= if mode == :edit then "Edit Timeline" elsif mode == :draft then "Update Draft" else "Create New Timeline" end %> 
 	<span style="font-size:12px; font-weight:normal">(<%= link_to "Other ways to create timelines", :controller => "home", :action => "jetpack" %>)</span>
 </h2>
-
+<span style="font-style:italic;color:gray; font-size:12px;margin-top:0x;">Timelines must contain between 3 to 6 articles.</span>
 <div class="space_10"></div>
 
 
@@ -181,7 +181,6 @@
 	  </ul>
 	</div>
 	<% end %>
-
 <% end %>
 
 
