--- a/trailr/public/stylesheets/fullscreen.css
+++ b/trailr/public/stylesheets/fullscreen.css
@@ -18,7 +18,6 @@ margin:0px;
 	width:100%;
 	height:88px;
 	margin-top:0px;
-	z-index:9999;
 	display:block;
 	text-align:center;
 	background-color:white;
@@ -38,12 +37,7 @@ margin:0px;
 
 #timelinediv .event
 {
-line-height:normal;
-cursor:pointer;
-}
-
-#timelineHeadLink
-{
+	line-height:normal;
 	cursor:pointer;
 }
 
@@ -56,6 +50,7 @@ cursor:pointer;
 	padding-right:0px;	
 	position:relative; 
 	top:0px; 
+	height:18px;
 	background-color:#ffffcc;
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffcc), color-stop(0.5, #ffcc00), color-stop(0.5, #ffcc00), to(#ffcc33));
 	background: -moz-linear-gradient(90deg, #ffffcc, #ffcc00, #ffcc33);
@@ -65,14 +60,21 @@ cursor:pointer;
 {
 	position:absolute;
 	top:0px;
-	width:100%;
+	width:100%;	
 }
+
 #timelinediv #controls #prevL { cursor:pointer; float:left; margin-top:8px; margin-left:5px; text-align: left;}
 #timelinediv #controls #prevE { cursor:pointer; float:left; margin-top:8px; margin-left:50px; }
 #timelinediv #controls #nextE { cursor:pointer; float:right; margin-top:8px; margin-right:50px; }
 #timelinediv #controls #nextL { cursor:pointer; float:right; margin-top:8px; margin-right:5px; text-align: right;}
 #timelinediv #more {position:relative;margin-top:30px;float:right; cursor:pointer;}
 
+#timelineHead #timelineHeadLink
+{
+	cursor:pointer;
+	z-index:9999;
+	margin-top:2px;
+}
 
 .mini_timeline { margin-top:3px; }
 
