Added status call out addition and changed the way _timeline was called at different points in the site

--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -211,7 +211,7 @@
 </fieldset>
 
 
-<%= render :partial => "timeline", :locals => { :noedit => false } %>
+<%= render :partial => "timeline", :locals => { :noedit => false, :id => @trail.id  } %>
 <%= render :partial => "template", :locals => { :noedit => false } %>
 
 
