--- a/trailr/app/views/trails/_static_timeline.html.erb
+++ b/trailr/app/views/trails/_static_timeline.html.erb
@@ -11,8 +11,9 @@
 	<div class="back">Back</div>
 	<div class="meta">
 		<ul>
-			<li>Link: <span id="fullLink">url</span></li>
+			<li>Link: <span id="fullLink">URL</span></li>
 			<li id="searchLink"><a id="showURL" style="cursor:pointer">Show timelines containing this link</a></li>
+			<li id="viewerLink"><a id="" style="cursor"<%= link_to "Launch linehive viewer", :controller => "trails", :action => "fullscreen", :id => trail.id %></li>
 			<!--<li id="startLink"><%# link_to "Start new timeline from here", :controller => "trails", :action => "create", :query => "url" %></li>-->
 		</ul>
 	</div>
