--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -43,6 +43,7 @@
 		<ul>
 			<li>Link: <span id="fullLink">url</span></li>
 			<li id="searchLink"><a id="showURL" style="cursor:pointer">Show timelines containing this link</a></li>
+			<li id="viewerLink"><a id="" style="cursor"<%= link_to "Launch linehive viewer", :controller => "trails", :action => "fullscreen", :id => id %></li>
 			<!--<li id="startLink"><%# link_to "Start new timeline from here", :controller => "trails", :action => "create", :query => "url" %></li>-->
 		</ul>
 	</div>
