--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 		<meta name="company" content="LineHive.com" />
 		<meta name="rating" content="general" />
 		<meta name="distribution" content="global" />
-		<meta name="description" content="Hyperlink Haikus: On LineHive, people share interesting sequences of websites they come across. You get a beautiful timeline with the websites on it, then you can share that timeline on any website by linking to it or embedding it." />
+		<meta name="description" content="<%= yield :description %>" />
 		<meta name="keywords" content="linehive, line, hive, timeline, crowdbrowse, hyperlink haikus" />
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -20,6 +20,8 @@
 		
 		
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="image_src" href="<%= yield :img_src %>" />
+		
 		<title><%= yield :title %></title>
 		
 		<%= yield :head %>
