--- a/trailr/app/views/feedback/thanks.html.erb
+++ b/trailr/app/views/feedback/thanks.html.erb
@@ -2,6 +2,9 @@
 	Thanks!
 <% end %>
 
+<% content_for :description do %>LineHive. Hyperlink storytelling: As we browse news stories, we make mental connections between pages. 'Hyperlink storytelling' is putting those links together to create mini-stories. Our algorithms automatically create timelines to make your mini-story a mini-beauty. Thinking through linking. Browse the connections others make of the same news stories.
+<% end %>
+<% content_for :img_src do %>http://linehive.com/images/logo6.png<% end %>
 <center>
 <h2>Thanks for your feedback!</h2>
 
