--- a/trailr/app/views/home/jetpack.html.erb
+++ b/trailr/app/views/home/jetpack.html.erb
@@ -2,6 +2,10 @@
 	LineHive: JetPack
 <% end %>
 
+<% content_for :description do %>LineHive. Hyperlink storytelling: As we browse news stories, we make mental connections between pages. 'Hyperlink storytelling' is putting those links together to create mini-stories. Our algorithms automatically create timelines to make your mini-story a mini-beauty. Thinking through linking. Browse the connections others make of the same news stories.
+<% end %>
+<% content_for :img_src do %>http://linehive.com/images/logo6.png<% end %>
+
 <% content_for :javascripts  do %>
 
 <link rel="jetpack" href="/jetpack/jetpack.js" name="LineHive"/>
