--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -1,6 +1,13 @@
 <% content_for :title do %>
-	LineHive: <%= @trail.caption %>
+	<%= @trail.caption %>
 <% end  %>
+
+<% content_for :description do %><% for article in @articles do %><%= article['headline'] %>, <br>
+<% end %>
+<% end  %>
+
+<% content_for :img_src do %><%= @articles[0]['image_url'] %><% end %>
+
 
 <% content_for :stylesheets do %>
 	<%= stylesheet_link_tag "overview" %>
@@ -111,9 +118,23 @@
 				<input class="text" name="url" value="<%= url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>" onclick="this.focus();this.select();" style="width:200px;">
 			</li>
 		</ul>
-		
 		<div class="clear"></div>
-		
+		<br>
+		<ul>
+		<li>
+		<!-- AddThis Button BEGIN -->
+			<div class="addthis_toolbox addthis_default_style">
+			<a class="addthis_button_facebook"></a>
+			<a class="addthis_button_twitter"></a>
+			<a class="addthis_button_google"></a>
+			<a class="addthis_button_email"></a>
+			<span class="addthis_separator">|</span>
+			<a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4bce6a7a6bd68012" class="addthis_button_compact">Share</a>
+			</div>
+		<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4bce6a7a6bd68012"></script>
+		<!-- AddThis Button END -->
+		</li></ul>
+		<div class="clear"></div>
 		</div>
 		
 		<% if current_admin %>
