Fixed images problem with fullscreen mode not showing search png

--- a/trailr/app/views/trails/fullscreen.html.erb
+++ b/trailr/app/views/trails/fullscreen.html.erb
@@ -18,7 +18,7 @@
 </head>
 <div id="timelinediv">
 	<div id="more">
-		<img src="http://localhost:3000/images/search.png" title="Search for more">
+		<img src="/images/search.png" title="Search for more">
 	</div>
 		<div id="timelineHeadCon">
 			<div id="timelineHead">
