Show page facebook title now correctly formatted

--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-	<%= @trail.caption %>
+	LineHive: <%= @trail.caption %>
 <% end  %>
 
 <% content_for :description do %><% for article in @articles do %><%= h article['headline'] %>, 
