Added support for featured, recent, and popular on front page

--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -32,11 +32,18 @@
 
 
 
-<div id="linehive_description">
-	<h2>Hyperlink storytelling</h2>
-	<h3>All you do is paste links and we automatically create beautiful mini-stories you can share with the world.</h3>	
-</div>
+<div id="description_box">
+	<div id="linehive_description">
+		<h2>Hyperlink storytelling</h2>
+		<h3>All you do is paste links and we automatically create beautiful mini-stories you can share with the world.</h3>	
+	</div>
 
+	<div id="tab_navigation_box">
+		<span class="current">Featured</span> - 
+		<a href="/recent">Recent</a> - 
+		<a href="/popular">Popular</a>
+	</div>
+</div>
 
 <div class="space_10"></div>
 
