Fixed formatting for the front page navigation

--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -30,14 +30,10 @@
 	</script>
 <% end %>
 
-
-
 <div id="description_box">
-	<div id="linehive_description">
+	<div id="linehive_description" title="All you do is paste links and we automatically create beautiful mini-stories you can share with the world.">
 		<h2>Hyperlink storytelling</h2>
-		<h3>All you do is paste links and we automatically create beautiful mini-stories you can share with the world.</h3>	
 	</div>
-
 	<div id="tab_navigation_box">
 		<span class="current">Featured</span> - 
 		<a href="/recent">Recent</a> - 
@@ -45,7 +41,7 @@
 	</div>
 </div>
 
-<div class="space_10"></div>
+<div class="space_5"></div>
 
 
 <% form_tag({:controller => "search", :action => "results"}, :id => 'searchURLForm' )  do %>
