Fixed formatting for the static timeline headline extra spacing on description

--- a/trailr/app/views/trails/_static_timeline.html.erb
+++ b/trailr/app/views/trails/_static_timeline.html.erb
@@ -61,9 +61,7 @@
 						<div class="close">[<a href="#">x</a>]</div>
 						<%= if article.date.nil? then Time.new.strftime("%b %d, %Y") else article.date.strftime("%b %d, %Y") end %>
 					</div>
-					<div class="headline">
-						<%= article.headline %>
-					</div>
+					<div class="headline"><%= article.headline %></div>
 				</div>
 			<% end %>
 		<% end %>
