Added a fix to the date timezone problem

--- a/trailr/app/views/trails/_static_timeline.html.erb
+++ b/trailr/app/views/trails/_static_timeline.html.erb
@@ -45,7 +45,7 @@
 							<%= article.image_url %>
 						</div>                   
 						<div class="date">       
-							<%= if article.date.nil? then Time.new.rfc2822() else article.date.rfc2822() end %>
+							<%= if article.date.nil? then Time.new.strftime("%m/%d/%Y") else article.date.strftime("%m/%d/%Y") end %>
 						</div>                   
 					</div>
 					<div class="thumbnail">
