--- a/trailr/app/views/trails/index.html.erb
+++ b/trailr/app/views/trails/index.html.erb
@@ -30,20 +30,7 @@
 	</script>
 <% end %>
 
-<div id="description_box">
-	
-	<div id="tab_navigation_box">
-		<span class="current">Featured</span> - 
-		<a href="/recent">Recent</a> - 
-		<a href="/popular">Popular</a>
-	</div>
-
-	<div id="linehive_description" title="All you do is paste links and we automatically create beautiful mini-stories you can share with the world.">
-		<h2>Hyperlink storytelling</h2>
-	</div>
-</div>
-
-<div class="space_5"></div>
+<%= render :partial => "description_box", :locals => {:current => "featured" } %>	
 
 
 <% form_tag({:controller => "search", :action => "results"}, :id => 'searchURLForm' )  do %>
