--- a/trailr/app/views/trails/popular.html.erb
+++ b/trailr/app/views/trails/popular.html.erb
@@ -30,23 +30,7 @@
 	</script>
 <% end %>
 
-
-
-<div id="description_box">
-	<div id="linehive_description">
-		<h2>Hyperlink storytelling</h2>
-		<h3>All you do is paste links and we automatically create beautiful mini-stories you can share with the world.</h3>	
-	</div>
-
-	<div id="tab_navigation_box">
-		<a href="/">Featured</a> - 
-		<a href="/recent">Recent</a> - 
-		<span class="current">Popular</span>
-	</div>
-</div>
-
-<div class="space_10"></div>
-
+<%= render :partial => "description_box", :locals => {:current => "popular" } %>	
 
 <% form_tag({:controller => "search", :action => "results"}, :id => 'searchURLForm' )  do %>
 	<input id="searchURL" type="hidden" name="query" value="lala" id="search_box" />
