--- a/trailr/public/stylesheets/layout.css
+++ b/trailr/public/stylesheets/layout.css
@@ -229,7 +229,7 @@
 #linehive_description {
 	margin-bottom:20px;
 	padding-bottom:20px;
-	border-bottom:1px solid gray;
+	/*border-bottom:1px solid #ddd;*/
 }
 
 #linehive_description * {
@@ -246,6 +246,15 @@
 	margin-top:2px;
 	margin-bottom:3px;
 	/*margin-left:-100px;*/
+}
+
+#linehive_description h2 span {
+	font-size:12px;
+	color:black;
+	margin-left: 15px;
+}
+#linehive_description h2 span a {
+	text-decoration:none;
 }
 
 #tab_navigation_box{
