Adding timer and hash code confirmation

--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -46,8 +46,8 @@
 				
 				$(".notice").slideDown();
 				setTimeout ( function() {
-					$(".notice").slideUp();
-					$(".notice").fadeOut();
+					//$(".notice").slideUp();
+					//$(".notice").fadeOut();
 				}, 3000 );
 				
 				
