Adding the markers for the validation

--- a/trailr/app/views/trails/_form.html.erb
+++ b/trailr/app/views/trails/_form.html.erb
@@ -167,7 +167,7 @@
 				return false;
 			}
 			
-			
+			// REMOVE: HERE
 			if (data.links.length < 3 || data.links.length > 6) {
 				alert("Timelines must contain between 3 to 6 articles.")
 				return false;
